# para2

./: CMakeLists.txt  MPIVectframe.h  Makefile  common.h  members.txt  mpi.cpp  openmp.cpp
cpu/: CMakeLists.txt  MPIComm.h  MPIVectframe.h  Makefile  auto-edison-mpi24  common.cpp  common.h  frame.h  job-edison-mpi12  job-edison-mpi8  mpi.cpp  mpi6.230940.stdout  mpi6.230946.stdout  openmp.cpp  serial.cpp
gpu/: CMakeLists.txt  GPUframe.cu  Makefile  common.h  frame_utils.cu  frame_utils.cuh  gpu.cu  physics.cu  physics.cuh  serial.cu
part1/: Makefile  frame.h  mpi.cpp  openmp.cpp
part2/: CMakeLists.txt  GPUframe.cuh  frame_utils.cuh  physics.cu
